--- a/src/Components/LandingPage/Docmate.css
+++ b/src/Components/LandingPage/Docmate.css
@@ -1,422 +1,463 @@
-.docmatebody{
-    width: 100%;
-    height: 120vh;
-    background-color: white;
-    display: flex;
-}
-
-.docmatebodyleft{
-    width: 55%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-}
-
-.upperdocdiv{
-width: 75%;
-height: 23%;
-margin-left: 40px;
-}
-
-.upperdocdiv >p{
-font-size: 20px;
-font-family: Poppins;
-font-weight: 400;
-color: #2C7DA0;
-}
-
-.upperdocdiv >h1{
-font-size: 30px;
-font-family: Poppins;
-font-weight: 700;
-}
-
-.lowerdocdiv{
+.docmatebody {
   width: 100%;
-  height:75% ;
-  /* background-color: orange; */
+  height: 120vh;
+  background-color: white;
+  /* background-color: green; */
   display: flex;
-   margin-left: 40px;
+  gap: 20px;
+}
+
+.docmatebodyleft {
+  width: 55%;
+  height: 100%;
+  display: flex;
   align-items: center;
   justify-content: center;
-    flex-direction: column;
-    gap: 10px;
+  flex-direction: column;
+  /* background-color: red; */
 }
 
-.conbodydiv{
-    width: 80%;
-    height: 35%;
-    /* background-color: gray; */
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    ;
-
+.upperdocdiv {
+  width: 75%;
+  height: 23%;
+  margin-left: 40px;
+  /* background-color: yellow; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 10px;
 }
 
-.leftcondiv{
-    width: 15%;
-    height: 100%;
-    /* background-color: rgb(158, 158, 5); */
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    flex-direction: column;
+.upperdocdiv > p {
+  font-size: 30px;
+  font-family: Poppins;
+  font-weight: 700;
+  color: #2c7da0;
 }
 
-.borderdiv{
-    width: 57%;
-    height: 25%;
-    background-color: gray;
-    border-radius: 30px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 20px;
-    color: white;
-    font-family: Poppins;
-    font-weight: 400;
+.upperdocdiv > h1 {
+  font-size: 20px;
+  font-family: Poppins;
+  line-height: 1.3;
+  font-weight: 500;
 }
 
-.strokediv{
-    width: 4%;
-    height: 70%;
-    background-color: #2C7DA0;
+.lowerdocdiv {
+  width: 100%;
+  height: 75%;
+  /* background-color: orange; */
+  display: flex;
+  margin-left: 40px;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 10px;
 }
 
-.rightcondiv{
-    width: 85%;
-    height: 100%;
-    /* background-color: aqua; */
-    gap: 20px;
-    display: flex;
-    align-items: flex-start;
-    justify-content: center;
-    flex-direction:column ;
-}
-.rightcondiv >h1{
-   font-size: 25px;
-   font-family: Poppins;
-   font-weight: 700;
-}
-.rightcondiv >p{
-   font-size: 18px;
-   font-family: Poppins;
-   font-weight: 400;
+.conbodydiv {
+  width: 80%;
+  height: 35%;
+  /* background-color: orange; */
+  /* background-color: gray; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.docmatebodyright{
-width: 55%;
-height: 100%;
-/* background-color: pink; */
-display: flex;
-justify-content: space-between;
-align-items: center;
-flex-direction: column;
+.leftcondiv {
+  width: 15%;
+  height: 100%;
+  /* background-color: rgb(158, 158, 5); */
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-direction: column;
 }
 
-.upperimage{
-    width: 100%;
-    height: 55%;
-    /* background-color: green; */
-    display: flex;
-    align-items:flex-end;
-    justify-content: flex-start;
-    gap: 15px;
-    
+.borderdiv {
+  width: 57%;
+  height: 25%;
+  background-color: #2c7da0;
+  border-radius: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  color: white;
+  font-family: Poppins;
+  font-weight: 400;
 }
 
-.upperleftimage{
-    width: 35%;
-    height: 55%;
-    /* background-color: blue; */
-
+.strokediv {
+  width: 4%;
+  height: 70%;
+  background-color: #2c7da0;
 }
 
-.upperleftimage >img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+.rightcondiv {
+  width: 85%;
+  height: 100%;
+  /* background-color: aqua; */
+  gap: 20px;
+  display: flex;
+  align-items: flex-start;
+  /* justify-content: center; */
+  flex-direction: column;
+}
+.rightcondiv > h1 {
+  font-size: 25px;
+  font-family: Poppins;
+  font-weight: 700;
+}
+.rightcondiv > p {
+  font-size: 16px;
+  font-family: Poppins;
+  /* color: #000; */
+  font-weight: 400;
+  line-height: 1.5;
 }
 
-.upperrightimage{
-    width: 42%;
-    height:85%;
-    /* background-color: #000; */
-}
-.upperrightimage >img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+.docmatebodyright {
+  width: 55%;
+  height: 100%;
+  /* background-color: pink; */
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: column;
 }
 
-.belowimage{
-    width: 75%;
-    height: 43%;
-    /* background-color: aqua; */
-    display: flex;
-    justify-content: center;
-    align-items:flex-start;
-    gap: 15px;
+.upperimage {
+  width: 100%;
+  height: 55%;
+  /* background-color: green; */
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-start;
+  gap: 15px;
+}
+
+.upperleftimage {
+  width: 35%;
+  height: 55%;
+  /* background-color: blue; */
+}
+
+.upperleftimage > img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.upperrightimage {
+  width: 42%;
+  height: 85%;
+  /* background-color: #000; */
+}
+.upperrightimage > img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.belowimage {
+  width: 75%;
+  height: 43%;
+  /* background-color: aqua; */
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 15px;
   margin-right: 60px;
 }
 
-.belowleftimage{
-    width: 38%;
+.belowleftimage {
+  width: 38%;
+  height: 55%;
+  /* background-color: blanchedalmond; */
+}
+.belowleftimage > img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.belowrightimage {
+  width: 45%;
+  height: 70%;
+  /* background-color: blueviolet; */
+}
+.belowrightimage > img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+@media screen and (max-width: 820px) {
+  .docmatebody {
+    width: 100%;
+    height: 60vh;
+    background-color: white;
+    /* background-color: green; */
+    display: flex;
+    gap: 20px;
+  }
+  .docmatebodyleft {
+    width: 100%;
+    height: 100%;
+    gap: 30px;
+    /* background-color: red; */
+  }
+  .borderdiv {
+    width: 80px;
+    height: 80px;
+    background-color: #2c7da0;
+    border-radius: 50%;
+  }
+
+  .upperdocdiv {
+    width: 75%;
+    height: 25%;
+    /* background-color: palevioletred; */
+  }
+  .upperdocdiv > p {
+    font-size: 50px;
+    font-weight: 500;
+  }
+
+  .upperdocdiv > h1 {
+    font-size: 24px;
+    font-weight: 500;
+  }
+
+  .lowerdocdiv {
+    width: 100%;
+    height: 80%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    margin-left:0px;
+    gap: 5px;
+  }
+
+  .conbodydiv {
+    width: 90%;
+    /* height: 30%; */
+    /* background-color: yellow; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .docmatebodyright {
+    display: none;
+  }
+
+  .upperimage {
+    width: 80%;
     height: 55%;
-    /* background-color: blanchedalmond; */
-}
-.belowleftimage >img{
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-start;
+    gap: 15px;
+  }
+
+  .upperleftimage {
+    width: 35%;
+    height: 55%;
+    background-color: blue;
+  }
+
+  .upperleftimage > img {
     width: 100%;
     height: 100%;
     object-fit: cover;
-}
+  }
 
-.belowrightimage{
+  .upperimage {
+    width: 100%;
+    height: 55%;
+    background-color: green;
+    display: flex;
+    align-items: flex-end;
+    justify-content: flex-start;
+    gap: 15px;
+  }
+
+  .upperleftimage {
     width: 45%;
-    height:70%;
-    /* background-color: blueviolet; */
-}
-.belowrightimage >img{
+    height: 55%;
+  }
+
+  .upperleftimage > img {
     width: 100%;
     height: 100%;
     object-fit: cover;
+  }
+
+  .upperrightimage {
+    width: 49%;
+    height: 80%;
+    background-color: #000;
+  }
+
+  .upperrightimage > img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+}
+
+@media screen and (max-width: 780px) {
+  .docmatebody {
+    width: 100%;
+    height: max-content;
+    background-color: white;
+    /* background-color: green; */
+    display: flex;
+    gap: 20px;
+  }
+
+  .docmatebodyleft {
+    width: 100%;
+    height: max-content;
+    /* gap: 30px; */
+    /* background-color: red; */
+  }
+  
+  .upperdocdiv{
+    width:90%;
+    margin-left:0px;
+    height: max-content;
+    /* background-color: purple; */
+  }
+
+  .lowerdocdiv{
+    width: 90%;
+    height: max-content;
+    /* background-color: green; */
+    gap:0px;
+  }
+  .conbodydiv{
+    width: 100%;
+    height: 200px;
+    /* background-color: yellow; */
+  }
 }
 
 
-@media screen and (max-width:820px) {
-    .docmatebodyleft{
-        width: 85%;
-        height: 100%;
-        background-color: red;
-    
-    }
+@media screen and (max-width: 500px) {
+  .docmatebody {
+    width: 100%;
+    height: max-content;
+    background-color: white;
+    /* background-color: green; */
+    display: flex;
+    gap: 20px;
+  }
 
-    .upperdocdiv{
-        width: 75%;
-        height: 25%;
-        background-color: palevioletred;
-    
-        }
-        .upperdocdiv >p{
-            font-size: 10px;
-            font-weight: 300;
-            }
-            
-            .upperdocdiv >h1{
-            font-size: 20px;
-            font-weight: 500;
-            }
+  /* .docmatebodyleft {
+    background-color: red;
+  } */
+  
+  /* .upperdocdiv{
+    background-color: purple;
+  } */
 
-            .lowerdocdiv{
-                width: 100%;
-                height:80% ;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                  flex-direction: column;
-                  gap: 5px;
-              }
-              
-              .conbodydiv{
-                  width: 100%;
-                  height: 30%;
-                  background-color: yellow;
-                  display: flex;
-                  align-items: center;
-                  justify-content: center;
-              }
+  .upperdocdiv p{
+    font-size: 30px;
+    width: 100%;
+  }
+  .upperdocdiv h1{
+    font-size: 21px;
+    width: 100%;
+  }
 
-              .docmatebodyright{
-                width: 55%;
-                height: 100%;
-                background-color: aqua;
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
-                flex-direction: column;
-                }
+  .conbodydiv{
+    height: 250px;
+    /* background-color: yellow; */
+    gap: 10px;
+  }
 
-                .upperimage{
-                    width: 80%;
-                    height: 55%;
-                    display: flex;
-                    align-items:flex-end;
-                    justify-content: flex-start;
-                    gap: 15px;
-                    
-                }
+  .leftcondiv {
+    width: 70px;
+    height: 100%;
+    /* background-color: rgb(158, 158, 5); */
+  }
 
-                .upperleftimage{
-                    width: 35%;
-                    height: 55%;
-                    background-color: blue;
-                
-                }
-                
-                .upperleftimage >img{
-                    width: 100%;
-                    height: 100%;
-                    object-fit: cover;
-                }
+  .rightcondiv{
+    width: calc(100% - 70px);
+    padding-block-start: 15px;
+  }
+  
+  .borderdiv {
+    width: 65px;
+    height: 65px;
+    border-radius: 50%;
+  }
+  
+  .strokediv {
+    height: calc(100% - 65px);
+  }
+}
 
-                .upperimage{
-                    width: 100%;
-                    height: 55%;
-                    background-color: green;
-                    display: flex;
-                    align-items:flex-end;
-                    justify-content: flex-start;
-                    gap: 15px;
-                    
-                }
-                
-                .upperleftimage{
-                    width: 45%;
-                    height: 55%;
-              
-                
-                }
-                
-                .upperleftimage >img{
-                    width: 100%;
-                    height: 100%;
-                    object-fit: cover;
-                }
-                
-                .upperrightimage{
-                    width: 49%;
-                    height:80%;
-                    background-color: #000;
-                }
+@media screen and (max-width: 375px) {
+  .docmatebody {
+    width: 100%;
+    height: max-content;
+    /* background-color: white; */
+    /* background-color: green; */
+    display: flex;
+    gap: 20px;
+  }
 
-                .upperrightimage >img{
-                    width: 100%;
-                    height: 100%;
-                    object-fit: cover;
-                }
-                
+  .docmatebodyleft {
+    height: max-content;
+    /* background-color: red; */
+  }
+  
+   /* .upperdocdiv{
+    background-color: purple;
+  }  */
+
+  .upperdocdiv p{
+    font-size: 30px;
+    width: 100%;
+  }
+  .upperdocdiv h1{
+    font-size: 21px;
+    width: 100%;
+  }
+
+  .conbodydiv{
+    height: 325px;
+    /* background-color: yellow; */
+    gap: 10px;
+  }
+
+  .leftcondiv {
+    width: 70px;
+    /* background-color: rgb(158, 158, 5); */
+  }
+
+  .rightcondiv{
+    width: calc(100% - 70px);
+    height: 100%;
+    padding-block-start: 15px;
+    /* background-color: blue; */
+  }
+  
+  .borderdiv {
+    width: 65px;
+    height: 65px;
+    border-radius: 50%;
+  }
+  
+  .strokediv {
+    height: calc(100% - 65px);
+  }
 }
 
 
 
-
-
-
-
-@media screen and (max-width:450px) {
-    .docmatebody{
-        width: 100%;
-        height: 120vh;
-        background-color: none;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-      margin-top: 40px;
-    }
-
-    .docmatebodyleft{
-        width: 85%;
-        height: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-    }
-
-    .upperdocdiv{
-        width: 75%;
-        height: 30%;
-        background-color: none;
-        margin-left: 40px;
-        }
-        
-        .upperdocdiv >p{
-        font-size: 15px;
-        font-weight: 300;
-        }
-        
-        .upperdocdiv >h1{
-        font-size: 20px;
-        font-weight: 500;
-        }
-
-        .lowerdocdiv{
-            width: 100%;
-            height:80% ;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-              flex-direction: column;
-              gap: 5px;
-          }
-          
-          .conbodydiv{
-              width: 100%;
-              height: 35%;
-              background-color: gree;
-              display: flex;
-              align-items: center;
-              justify-content: center;
-          }
-          
-          .leftcondiv{
-              width: 35%;
-              height: 90%;
-              display: flex;
-              align-items: center;
-              justify-content: space-around;
-              flex-direction: column;
-          }
-
-          .borderdiv{
-            width: 30%;
-            height: 30%;
-            background-color: grey;
-            border-radius: 70px;
-            font-size: 20px;
-            font-weight: 400;
-        }
-        
-        .strokediv{
-            width: 3%;
-            height: 70%;
-            background-color: #2C7DA0(81, 0, 255);
-        }
-        
-        .rightcondiv{
-            width: 75%;
-            height: 91%;
-            display: flex;
-            align-items: none;
-            justify-content: flex-start;
-            flex-direction:column ;
-        }
-
-        .rightcondiv >h1{
-           font-size: 18px;
-           font-weight: 600;
-        }
-
-        .rightcondiv >p{
-           font-size: 13px;
-           font-weight: 400;
-        
-           
-        }
-        
-        .docmatebodyright{
-        width: 55%;
-        height: 100%;
-        background-color: none;
-        display: none;
-        justify-content: space-between;
-        align-items: center;
-        flex-direction: column;
-        }
-        
- 
-   
-}
