--- a/src/Components/LandingPage/Health.css
+++ b/src/Components/LandingPage/Health.css
@@ -29,7 +29,6 @@
     /* background-color: blue; */
     display: flex;
     justify-content: center;
-
 }
 
 .bodybtn{
@@ -43,4 +42,60 @@
     font-size: 20px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: white;
+}
+
+@media screen and (max-width:820px) {
+    .healthbody{
+        height: 30vh;
+        /* background-color: red; */
+        gap: 30px;
+    }
+
+    .healthbodydiv{
+        width: 90%;
+        height: max-content;
+    }
+
+    .healthbodybtndiv{
+        width: 90%;
+        height: max-content;
+        /* background-color: blue; */
+    }
+
+    .bodybtn{
+        width: 200px;
+        height: 70px;
+        /* background-color:#27789c; */
+        background-color: #fff;
+        /* border: 1.5px solid #2c7da0; */
+        color: #2c7da0;
+        border-radius: 7px;
+    }
+}
+@media screen and (max-width:500px) {
+    .healthbody{
+        width:100%;
+        height: max-content;
+        padding-block: 30px;
+    }
+
+    .healthbodydiv >h1{
+        font-size: 24px;
+        font-weight: 500;
+        font-family: Poppins;
+        text-align: center;
+        color: white;
+      }
+
+      
+    .bodybtn{
+        width: 200px;
+        height: 60px;
+    }
+}
+@media screen and (max-width:820px) {
+    
+}
+@media screen and (max-width:820px) {
+    
 }
