--- a/src/Components/LandingPage/Hero.css
+++ b/src/Components/LandingPage/Hero.css
@@ -1,10 +1,15 @@
 .HeroPage {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: max-content;
     background-image: linear-gradient(#D2E1F2, #ECEAF7);
+    /* flex-direction: row; */
+}
+
+.HeroPageWrapper{
+    width: 100%;
+    height: 80vh;
     display: flex;
     /* flex-direction: row; */
-
 }
 
 .leftHero {
@@ -16,8 +21,8 @@
     justify-content: center;
     flex-direction: column;
     gap: 10px;
-    padding-left: 50px;
-    padding-top: 50px;
+    /* padding-left: 50px; */
+    /* padding-top: 50px; */
 }
 
 .Docdiv {
@@ -51,8 +56,8 @@
 
 .makingdiv>h1 {
     font-size: 35px;
-    font-weight: 500;
-    font-family: Popkins;
+    font-weight: 400;
+    font-family: Poppins;
     color: rgb(34, 32, 32);
 }
 
@@ -70,7 +75,7 @@
     height: 47px;
     border: none;
     background-color: #2c7da0;
-    border-radius: 2px;
+    border-radius: 5px;
     font-size: 15px;
     font-family: Poppins;
     color: white;
@@ -94,43 +99,67 @@
 }
 
 @media screen and (max-width:820px) {
-    .leftHero {
-        width: 60%;
+    .HeroPage {
+        width: 100%;
+        height: max-content;
+        margin-top: 68px;
         display: flex;
+        justify-content: center;
+        /* flex-direction: row; */
+    }
 
+    .HeroPageWrapper{
+        width: 90%;
+        height: 50vh;
+        /* flex-direction: row; */
+    }
 
+    .leftHero {
+        width: 50%;
+        height: 100%;
+        display: flex;
+        gap: 20px;
+        /* margin-left: 70px; */
+        /* background-color: red; */
     }
 
     .Docdiv {
-        width: 90%;
-        height: 35%;
+        width: 100%;
+        height: max-content;
+        /* background-color: indianred; */
     }
 
     .Docdiv>h1 {
-        font-size: 36.5px;
-        font-weight: 400;
+        width: 100%;
+        font-size: 32px;
+        font-weight: 500;
     }
 
 
     .makingdiv {
-        width: 90%;
-        height: 18%;
+        width: 100%;
+        height: max-content;
         display: flex;
     }
 
     .makingdiv>h1 {
-        font-size: 35px;
-        font-weight: 500;
+        width: 100%;
+        font-size: 34px;
+        font-weight: 400;
 
     }
 
     .btndiv {
-        width: 90%;
-        height: 15%;
+        width: 100%;
+        height: max-content;
+        /* background-color: yellow; */
     }
 
     .rightHero {
         width: 50%;
+        height: 100%;
+        /* background-color: green; */
+        /* margin-right: 70px; */
 
     }
 
@@ -138,72 +167,54 @@
         width: 100%;
         height: 100%;
         object-fit: cover;
-
-
     }
 
 }
 
-
-
-
-
-
-@media screen and (max-width : 428px) {
-
+@media screen and (max-width : 768px) {
     .HeroPage {
-        height:  70vh;
-        background-image: linear-gradient(#D2E1F2, #ECEAF7);
-        /* padding-block: 20px; */
+        width: 100%;
+        height: max-content;
+    }
+}
+
+@media screen and (max-width : 500px) {
+    .HeroPage {
+        width: 100%;
+        height: max-content;
+    }
+
+    .HeroPageWrapper{
+        width: 90%;
+        height: max-content;
+    }
+    .rightHero {
+        width: 48%;
+        height: 100%;
+        display: none;
     }
 
     .leftHero {
         width: 100%;
         height: 100%;
-
+        display: flex;
+        gap: 20px;
+        /* margin-left: 70px; */
+        /* background-color: red; */
+        padding-block: 30px;
     }
+}
 
-    .Docdiv {
-        width: 100%;
-        height:  60%;
-        padding-block-start: 20px;
+@media screen and (max-width : 360px) {
+    .leftHero {
+        gap: 10px;
+        /* margin-left: 70px; */
+        background-color: red;
     }
-
-    .Docdiv>h1 {
-        font-size: 28px;
-        font-weight: 500;
-        font-family: Poppins;
-
+    .Docdiv h1 {
+        font-size: 24px;
     }
-
-    .makingdiv {
-        width: 100%;
-        height: 20%;
-  
-    }
-
-    .makingdiv>h1 {
-        font-size: 25px;
-        font-weight: 300;
-    }
-
-    .rightHero {
-        width: 48%;
-        height: 100%;
-        display: none;
-
-    }
-
-    .btndiv {
-        width: 100%;
-        height: 20%;
-     
-
-    }
-
-    .started {
-        width: 130px;
-        height: 45px;
-
+    .makingdiv h1{
+        font-size: 20px;
     }
 }
