--- a/src/Components/LandingPage/ServiceCard.css
+++ b/src/Components/LandingPage/ServiceCard.css
@@ -1,333 +1,188 @@
-.servicecardbody{
-    width: 100vw;
-    height: 100vh;
-    background-color: #ECEAF7;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding-block: 20px;
+.servicecardbody {
+  width: 100%;
+  height: max-content;
+  background-color: #eceaf7;
+  /* background-color: green; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-block: 20px;
 }
 
-.cardholderdiv{
-    width: 50%;
-    height:95%;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 10px;
-    justify-content: space-around;
-    
+.cardholderdiv {
+  width: 90%;
+  height: max-content;
+  display: flex;
+  flex-wrap: wrap;
+  /* background: red; */
+  gap: 10px;
+  justify-content: space-around;
 }
-.uppercardholderdiv{
-    width: 100%;
-    height:48%; 
-    /* background-color: pink; */
-     display: flex;
-    justify-content:space-between;
-    gap: 20px;
-}
-
- .carddiv{
-    width: 45.5%;
-    height: 45%;
-    background-color: white;
-    /* box-shadow: 0px 0px 20px 1px lightgrey; */
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
-    gap: 10px;
-    border-radius: 5px;
-   
-} 
-.carddiv>img{
-    width: 40%;
-    height: 40%;
-    object-fit: contain;
+.uppercardholderdiv {
+  width: 100%;
+  height: 48%;
+  background-color: pink;
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
 }
 
-  .carddiv > h1{
-font-size: 25px;
-font-weight: 700;
- font-family: Poppins
-
+.carddiv {
+  width: 45.5%;
+  height: 350px;
+  background-color: white;
+  /* box-shadow: 0px 0px 20px 1px lightgrey; */
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  gap: 10px;
+  border-radius: 5px;
+}
+.carddiv > img {
+  width: 40%;
+  height: 40%;
+  object-fit: contain;
 }
 
-.carddiv > p{
-font-size: 15px;
-font-weight: 450;
- font-family: Poppins;
-text-align: center;
-
+.carddiv > h1 {
+  font-size: 25px;
+  font-weight: 700;
+  font-family: Poppins;
 }
 
- .carddiv2{
-    width: 45.5%;
-    height: 45%;
-    background-color: white;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
-    gap: 10px;
-    border-radius: 5px;
-
-} 
-
-.carddiv2 >img{
-    width: 50%;
-    height: 50%;
-    object-fit: contain;
-}
-  .carddiv2 > h1{
-font-size: 25px;
-font-weight: 700;
-font-family: Poppins;
-text-align: center;
-
-}
-.carddiv2 > p{
-    font-size: 15px;
-    font-weight: 450;
-font-family: Poppins;
-text-align: center;
-
+.carddiv > p {
+  font-size: 15px;
+  font-weight: 450;
+  font-family: Poppins;
+  text-align: center;
 }
 
-.lowercardholderdiv{
-  
-    width: 100%;
-    height:48%;
-    background-color: pink;
-    /* display: flex;
+.carddiv2 {
+  width: 35%;
+  height: 300px;
+  background-color: white;
+  /* background-color: #373737; */
+  /* font-weight: 600; */
+  box-shadow: rgba(0, 0, 0, 0.15) 0px 3px 3px 0px;
+  /* background-color: gray; */
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  gap: 10px;
+  border-radius: 9px;
+  /* line-height: 1.5; */
+}
+
+.carddiv2Img {
+  width: 90px;
+  height: 90px;
+}
+
+.carddiv2Img > img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+.carddiv2 > h1 {
+  font-size: 25px;
+  font-weight: 700;
+  font-family: Poppins;
+  text-align: center;
+}
+.carddiv2 > p {
+    width: 80%;
+  font-size: 15px;
+  font-weight: 450;
+  color: #373737;
+  font-family: Poppins;
+  line-height: 1.5;
+  text-align: center;
+}
+
+.lowercardholderdiv {
+  width: 100%;
+  height: 48%;
+  background-color: pink;
+  /* display: flex;
     justify-content:space-between;
     gap: 20px; */
- } 
+}
 
-.carddiv3{
-    width: 45.5%;
+
+
+@media screen and (max-width: 820px) {
+  .servicecardbody {
+    width: 100%;
+    height: max-content;
+    padding-block: 30px;
+  }
+  .cardholderdiv {
+    /* background: #000;  */
+    width: 90%;
+    gap: 0px;
+  }
+
+  .carddiv {
+    width: 45%;
     height: 45%;
-    background-color: white;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
-    gap: 10px;
-    border-radius: 5px;
+  }
 
-} 
-
-.carddiv3 >img{
-    width: 50%;
-    height: 50%;
+  .carddiv > img {
+    width: 30%;
+    height: 30;
     object-fit: contain;
+  }
+
+  .carddiv2 {
+    width: 333px;
+    height: 300px;
+    margin-bottom: 30px;
+  }
 }
 
-.carddiv3 > h1{
-    font-size: 25px;
-font-weight: 700;
-font-family: Poppins;
+@media screen and (max-width: 780px) {
+  .servicecardbody {
+    width: 100%;
+    height: max-content;
+    padding-block: 30px;
+    /* background-color: green; */
+  }
+
+  .cardholderdiv {
+    /* background: #000;  */
+    width: 90%;
+    gap: 0px;
+    /* flex-direction: column; */
+  }
+
+  .carddiv2{
+    width: 45%;
+    height: 300px;
+  }
 }
 
-.carddiv3 > p{
-    font-size: 15px;
-    font-weight: 450;
-    font-family: Poppins;
-    text-align: center;
-    
-    }
+@media screen and (max-width: 500px) {
+  .cardholderdiv {
+    /* background: #000;  */
+    height: max-content;
+  }
 
-
-
- .carddiv4{
-    width: 45.5%;
-    height:45%;
-    background-color: white;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
-    gap: 10px;
-    border-radius: 5px;
-
-} 
-
-.carddiv4 >img{
-    width: 50%;
-    height: 50%;
-    object-fit: contain;
+  .carddiv2{
+    width: 90%;
+    height: 300px;
+  }
 }
 
-.carddiv4 > h1{
-    font-size: 25px;
-font-weight: 700;
-font-family: Poppins;
+@media screen and (max-width: 375px) {
+  .carddiv2{
+    width: 100%;
+  }
 }
 
-.carddiv4 > p{
-    font-size: 15px;
-    font-weight: 450;
-    font-family: Poppins;
-    text-align: center;
-    
-    }
-
-@media screen and (max-width:820px) {
-
-    .cardholderdiv{
-      /* background: #000;  */
-      width: 90%; 
-    }
-
-    .carddiv{
-        width: 45%;
-        height: 45%;
-    
-    } 
-
-    .carddiv > img{
-        width: 30%;
-        height: 30;
-       object-fit: contain;
-    } 
-
-    .carddiv2{
-        width: 45%;
-        height: 45%;
-    
-   
-
-    } 
+@media screen and (max-width: 320px) {
+  .carddiv2{
+    width: 100%;
+  }
 }
-
-
-
-    @media screen and (width : 428px){
-        .servicecardbody{
-            width: 100%;
-            height: auto;
-            background-color: none;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-
-        .cardholderdiv{
-            width: 90%;
-            height:auto;
-            background-color: none;
-            display: flex;
-            justify-content: space-around;
-            align-items: center;
-            flex-wrap: wrap;
-   
-            
-        }
-
-        .carddiv{
-            width: 70%;
-            height: 45%;
-            border-radius: 3px;
-          
-        } 
-
-        .carddiv >img{
-            width: 20%;
-            height: 40%;
-            object-fit: contain;
-        }
-
-        .carddiv > h1{
-            font-size: 20px;
-            font-weight: 700;
-             font-family: Poppins
-            
-            }
-            
-            .carddiv > p{
-            font-size: 15px;
-            font-weight: 450;
-            text-align: center;
-            
-            }
-
-        .carddiv2{
-            width: 70%;
-            height: 45%;
-            border-radius: 3px;
-        } 
-
-        .carddiv2 >img{
-            width: 20%;
-            height: 40%;
-            object-fit: contain;
-        }
-
-        .carddiv2 > h1{
-            font-size: 20px;
-            font-weight: 700;
-            text-align: center;
-            
-            }
-            .carddiv2 > p{
-                font-size: 13px;
-                font-weight: 450;
-            font-family: Poppins;
-            text-align: center;
-            
-            }
-
-
-
-        .carddiv3{
-            width: 70%;
-            height: 45%;
-            border-radius: 3px;
-        } 
-
-        .carddiv3 >img{
-            width: 20%;
-            height: 40%;
-            object-fit: contain;
-        }
-
-        .carddiv3 > h1{
-            font-size: 20px;
-        font-weight: 700;
-        font-family: Poppins;
-        }
-        
-        .carddiv3 > p{
-            font-size: 13px;
-            font-weight: 450;
-            font-family: Poppins;
-            text-align: center;
-            
-            }
-
-
-        .carddiv4{
-            width: 70%;
-            height: 45%;
-            border-radius: 3px;
-      
-        } 
-
-        .carddiv4 >img{
-            width: 20%;
-            height: 40%;
-            object-fit: contain;
-        }
-
-        .carddiv4 > h1{
-            font-size: 20px;
-        font-weight: 700;
-  
-        }
-        
-        .carddiv4 > p{
-            font-size: 13px;
-            font-weight: 450;
-            text-align: center;
-            
-            }
-    }
