--- a/src/Components/LandingPage/Services.css
+++ b/src/Components/LandingPage/Services.css
@@ -1,7 +1,9 @@
 .serivicediv{
-    width: 100vw;
-    height: 50vh;
+    width: 100%;
+    height: max-content;
+    padding-block: 50px;
     background-color: #ECEAF7;
+    /* background-color: red; */
     display: flex;
     /* align-items: center; */
     justify-content: center;
@@ -18,18 +20,20 @@
 }
 
 .textholder > h1{
-    font-size: 52px;
-    font-weight: 600;
+    font-size: 45px;
+    font-weight: 550;
     font-family:Poppins;
     color: #2c7da0;
 }
 
 .textholder > p{
-    font-size: 20px;
+    font-size: 18px;
     font-weight: 350;
     font-family: Poppins;
+    width: 100%;
     text-align: center;
-    
+    line-height: 1.5;
+    color: #373737;
 }
 
 @media screen and ( max-width: 820px) {
@@ -54,6 +58,56 @@
     }
 }
 
+@media screen and ( max-width: 768px) {
+    #serivicediv{
+        width: 100%;
+        height: max-content;
+    }
+
+    .textholder{
+        width: 80%;
+        height: 60%;
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+    }
+
+    .textholder > h1{
+        font-size: 35px;
+        font-weight: 700;
+        color: #2c7da0;
+    }
+}
+
+@media screen and ( max-width: 500px) {
+    .serivicediv{
+        width: 100%;
+        height: max-content;
+        /* background-color: green; */
+    }
+
+    .textholder{
+        width: 90% !important;
+        height: 60%;
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+        /* background-color: red; */
+    }
+
+    .textholder > h1{
+        width: 100%;
+        text-align: center;
+        font-size: 35px;
+        font-weight: 700;
+        color: #2c7da0;
+    }
+    .textholder > p{
+        width: 100%;
+        text-align: center;
+        font-size: 15px;
+    }
+}
 
 
 
