--- a/src/Components/LandingPage/Hero.css
+++ b/src/Components/LandingPage/Hero.css
@@ -3,6 +3,7 @@
     height: max-content;
     background-image: linear-gradient(#D2E1F2, #ECEAF7);
     /* flex-direction: row; */
+    margin-top: 68px;
 }
 
 .HeroPageWrapper{
@@ -20,24 +21,26 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    gap: 10px;
+    gap: 20px;
     /* padding-left: 50px; */
     /* padding-top: 50px; */
 }
 
 .Docdiv {
     width: 80%;
-    height: 30%;
+    height: max-content;
     /* background-color: pink; */
     display: flex;
     align-items: center;
     justify-content: flex-start;
+    margin-bottom: 10px;
 }
 
 .Docdiv>h1 {
-    font-size: 50px;
+    font-size: 45px;
     font-weight: 500;
     font-family: Poppins;
+    line-height: 1.3;
 }
 
 .Docdiv>h1>span {
@@ -46,25 +49,25 @@
 
 .makingdiv {
     width: 80%;
-    height: 15%;
+    height: max-content;
     /* background-color: gray; */
     display: flex;
     align-items: flex-end;
     justify-content: flex-start;
-
 }
 
 .makingdiv>h1 {
     font-size: 35px;
     font-weight: 400;
+    line-height: 1.3;
     font-family: Poppins;
-    color: rgb(34, 32, 32);
+    color: #272727;
 }
 
 .btndiv {
     width: 80%;
-    height: 15%;
-    /* background-color:purple; */
+    height: max-content;
+    /* background-color: purple; */
     display: flex;
     align-items: center;
     justify-content: flex-start;
