--- a/src/Components/Onboarding/HospitalRegister.css
+++ b/src/Components/Onboarding/HospitalRegister.css
@@ -1,328 +1,331 @@
-.patientregisterdiv{
-    width: 100vw;
-    height: 100vh;
+.patientregisterdiv {
+  width: 100vw;
+  height: 100vh;
+  /* background-color: red; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: poppins;
+}
+
+
+
+.patientregisterholder {
+  width: 65%;
+  height: 85%;
+  /* background: whitesmoke; */
+  display: flex;
+  /* box-shadow: 2px 2px 4px #bcbaba; */
+}
+
+.leftpatientregister {
+  width: 38%;
+  height: 100%;
+  background-color: #2c7da0;
+  border-top-left-radius: 15px;
+  border-bottom-left-radius: 15px;
+  padding: 20px;
+}
+
+.upperleftpatientregister {
+  /* background: #000; */
+  width: 30%;
+  height: 14%;
+  align-items: center;
+  justify-content: center;
+  /* padding-inline: 10px; */
+  border-top-left-radius: 10px;
+
+}
+
+.logoimage11 {
+  width: 80%;
+  height: 80%;
+  object-fit: contain;
+}
+
+.image2 {
+  width: 95%;
+  height: 95%;
+}
+
+.rightpatentrester {
+  width: 55%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  gap: 15px;
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
+  /* background: #000; */
+  border: 1px solid lightblue;
+
+
+}
+
+.signupdiv {
+  width: 85%;
+  height: 10%;
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-start;
+
+}
+
+.signupdiv>h2 {
+  font-size: 22px;
+  font-family: Poppins;
+  font-weight: 500;
+}
+
+.theformholder {
+  width: 90%;
+  min-height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  /* background-color: blue; */
+}
+
+.theformholders {
+  width:  90%;
+  min-height: 50px;
+  /* background: yellow; */
+  border: 1px solid lightblue;
+  border-radius: 8px;
+  outline: 10px;
+  font-size: 14px;
+  font-size: 250;
+  font-family: poppins;
+  cursor: pointer;
+  background: none;
+  padding-left: 7px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
+.theformholdersWrapper{
+  height: 90%;
+  width: 100%;
+  /* background: green; */
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.theformholdersWrapper input{
+  height: 100%;
+  width: 100%;
+  border: none;
+  outline: 10px;
+  font-size: 14px;
+  font-size: 250;
+  font-family: poppins;
+  cursor: pointer;
+  background: none;
+  padding-left: 7px;
+  margin-right:20px;
+  /* background: red; */
+}
+
+.theformholder>input {
+  width: 100%;
+  height: 100%;
+  border: 1px solid lightblue;
+  /* background-color: red; */
+  border-radius: 8px;
+  outline: 10px;
+  font-size: 14px;
+  font-size: 250;
+  font-family: poppins;
+  cursor: pointer;
+  background: none;
+  padding-left: 7px;
+
+}
+
+.loader {
+  width: 100%;
+  height: 10%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+.btnndiv {
+  width: 100%;
+  height: 80px;
+  /* background-color: green; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.submitbttn {
+  width: 90%;
+  height: 50px;
+  background-color: #2c7da0;
+  border: none;
+  border-radius: 5px;
+  color: white;
+  cursor: pointer;
+  font-size: 20px;
+  font-weight: 400;
+  font-family: poppins;
+}
+
+.submitbttn:hover {
+  background-color: #27b7f5;
+}
+
+.eye_icon{
+  height: 100%;
+  /* background: red; */
+  cursor: pointer;
+  font-size: 20px;
+  width: 5%;
+  margin-right: 5px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+#theFormholderInputContainer {
+  border: none;
+}
+
+#theFormholderInput {
+  /* margin-top: 30px; */
+  border: none;
+}
+
+.backarrow {
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  left: 30px;
+  top: 20px;
+  background-color: #2c7da0;
+  border-radius: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
+
+@media screen and (max-width:428px) {
+  .leftpatientregister {
+    display: none;
+
+  }
+
+  .patientregisterholder {
+    width: 90%;
+    height: 80%;
     /* background-color: red; */
+
+  }
+
+  .rightpatentrester {
+    justify-content: space-evenly
+  }
+
+  .signupdiv {
+    width: 100%;
+    height: 10%;
+
+  }
+
+  .signupdiv>h2 {
+    font-size: 15px;
+    font-weight: 400;
+  }
+
+  .rightpatentrester {
+    width: 100%;
     display: flex;
-    align-items: center;
     justify-content: center;
-    font-family: poppins;
-   }  
-   
- 
-   .patientregisterholder{
-     width:65%;
-     height: 80%;
-     /* background: whitesmoke; */
-     display: flex;
-     /* box-shadow: 2px 2px 4px #bcbaba; */
-   }
- 
-   .leftpatientregister{
-     width: 38%;
-     height: 100%;
-     background-color:  #2c7da0;
-     border-top-left-radius: 15px;
-     border-bottom-left-radius: 15px;
-     padding: 20px;
-   }
- 
-   .upperleftpatientregister{
-     /* background: #000; */
-     width: 30%;
-     height: 14%;
-     align-items: center;
-     justify-content: center;
-     /* padding-inline: 10px; */
-     border-top-left-radius: 10px;
-     
-   }
- 
-   .logoimage11{
-     width: 80%;
-     height: 80%;
-     object-fit: contain;
-   }
- 
-  .image2{
-   width: 95%;
-   height: 95%;
+    /* background-color: yellow; */
+    align-items: center;
+
   }
- 
-  .rightpatentrester{
-   width: 55%;
-   height: 100%;
-   display: flex;
-   justify-content: center;
- flex-direction: column;
- align-items: center;
- gap: 20px;
- 
- 
+
+  .theformholder {
+    width: 95%;
+    height: 40px;
+    /* background: #000; */
+
   }
- 
-  .signupdiv{
-   width: 85%;
-   height: 10%;
-   display: flex;
-   align-items: flex-end;
-   justify-content: flex-start;
-   
+
+  .theformholder>input {
+    padding-left: 8px;
+    height: 80%;
+
   }
- 
-  .signupdiv>h2{
-   font-size: 22px;
-   font-family: Poppins;
-   font-weight: 500;
+
+  .loader {
+    height: 8%;
   }
- 
-  .theformholder{
-   width: 90%;
-   min-height:  40px;
-   display: flex;
-   align-items: center;
-   justify-content: center;
-   /* background-color: blue; */
-  }
- 
-  .theformholder > input{
-   width: 100%;
-   height: 100%;
-   border: 1px solid lightblue;
-   background-color: red;
-   border-radius: 8px;
-   outline: 10px;
-   font-size: 14px;
-   font-size: 250;
-   font-family: poppins;
-   cursor: pointer;
-   background: none;
-   padding-left: 7px;
- 
-  }
- 
-  .loader{
-   width: 100%;
-   height: 10%;
-   display: flex;
-   justify-content: center;
-   align-items: center ;
- }
- 
- 
+
+
   .btnndiv {
-   width: 100%;
-   height: 80px;
-   /* background-color: green; */
-   display: flex;
-   justify-content: center;
-   align-items: center;
-   flex-direction: column;
-  }
-  .submitbttn{
-   width: 90%;
-   height: 50px;
-   background-color:#2c7da0;
-   border: none;
-   border-radius: 5px;
-   color: white;
-   cursor: pointer;
-   font-size: 20px;
-   font-weight: 400;
-   font-family: poppins;
-  }
- 
-  .submitbttn:hover{
-   background-color: #27b7f5;
+    width: 100%;
+    height: 70px;
+    /* background: #000; */
+
   }
 
-  #theFormholderInputContainer{
-    border: none;
+  .submitbttn {
+    width: 90%;
+    height: 70px;
+    font-size: 15px;
+
+
   }
-  
-  #theFormholderInput{
-    /* margin-top: 30px; */
-    border: none;
+}
+
+
+
+
+
+@media screen and (max-width:820px) {
+
+  .rightpatentrester {
+
+    height: 100%;
+    /* background-color: yellow; */
+
   }
 
- 
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    
-    /* 
- 
- .registerbody1{
-     width: 100vw;
-     height: 100vh; 
-     background-color: yellow;
-     display: flex;
-     align-items: center;
-     justify-content: center;
-     
-  } 
- 
-  .registerbodywrapper{
-   width: 60%;
-   height: 80%;
-   background-color: purple;
-   display: flex;
-   align-items: center;
-   justify-content: center;
+  .signupdiv {
+    height: 5%;
+
+
   }
-  
- .registerbothdiv{
-     width: 60%;
-     height:70% ;
-     background-color: whitesmoke;
-     border-radius: 10px;
-     display: flex;
-     align-items: center;
-     justify-content: center;
- 
- } 
- 
-  .registerimagediv{
-     width: 39%;
-     height: 100%;
-     background-color: #2c7da0;
-     border-right: 20px;
-     display: flex;
-      align-items: center; 
-       justify-content: space-between; 
-     flex-direction: column;
-     border-top-left-radius: 10px;
-     /* border-bottom-left-radius:10px ; */
- /* }
- 
- .registerlogo{
-     width: 90%;
-     height: 15%;
-      background-color:pink; 
-     display: flex;
- 
-    
- 
- }
- 
- .registerlogo >img{
-     width: 100%;
-     height: 100%;
-     object-fit: contain;
- } 
- 
-  .mainimage{
-     width: 100%; */
-     /* height: 80%; 
-      background-color: blue; 
-      display: flex;
-     align-items: center;
-     justify-content: center; 
-     /* gap: 50px; */
-  
- 
-  /* .mainimage >img{
-     width: 100%;
-     height: 100%;
- object-fit: contain;
- }  */
- /* 
-  .registertextdiv{
-     width: 60%;
-     height: 100%; 
-     /* background-color: purple; */
-      /* display: flex;
-     align-items: center;
-     flex-direction: column;
-     justify-content: space-around;
-     
- }   */
- /* 
-  .acctdiv{
-     width: 50%;
-     height: 16%;  */
-     /* background-color: aqua; */
-      /* display:flex; 
-   
+
+  .signupdiv>h2 {
+    font-size: 15px;
+    font-weight: 400;
   }
- .acctdiv >h1{
- font-size: 25px;
- font-weight: 400;
- font-family: Poppins;
- }
- 
- .theform{
-   width: 85%;
-   height: 12%;  */
-   /* background-color: green; */
-    /* display: flex;
-   align-items: center;
-   justify-content: space-between;
-   flex-direction: column;
-   gap: 10px;
- } 
- 
-  .theform>input{
-     width: 100%;
-   height: 54px;
-   border: 1px solid lightgrey;
-   border-radius: 8px;
-   padding-left: 10px;
-   outline: none;
-   font-size: 20px;
-   font-size: 300;
-   font-family: poppins;
-   cursor: pointer;
-   background-color: white;
- }  */
- /* 
- 
- 
- .submitbtn {
-   width: 70%;
-   height: 65px;
-   background-color: #2c7da0;
-   border: none;
-   border-radius: 5px;
-   margin-top: 30px;
-   margin-left: 15px;
-   color: white;
-   cursor: pointer;
-   font-size: 20px;
-   font-weight: 400;
-   font-family: poppins;
- }  */
- 
+
+
+  .theformholder {
+    height: 20px;
+
+
+  }
+
+  .theformholder>input {
+    width: 100%;
+    height: 100%;
+
+
+
+  }
+}
