--- a/src/Components/Onboarding/PatientRegister.css
+++ b/src/Components/Onboarding/PatientRegister.css
@@ -1,143 +1,255 @@
- .patientregisterdiv{
-   width: 100vw;
-   height: 100vh;
-   /* background-color: red; */
+.patientregisterdiv{
+  width: 100vw;
+  height: 100vh;
+  /* background-color: red; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-family: poppins;
+ }  
+ 
+
+ .patientregisterholder{
+   width:65%;
+   height: 80%;
+   /* background: whitesmoke; */
    display: flex;
-   align-items: center;
-   justify-content: center;
-   font-family: poppins;
-  }  
-  
-
-  .patientregisterholder{
-    width:65%;
-    height: 80%;
-    /* background: whitesmoke; */
-    display: flex;
-    /* box-shadow: 2px 2px 4px #bcbaba; */
-  }
-
-  .leftpatientregister{
-    width: 38%;
-    height: 100%;
-    background-color:  #2c7da0;
-    border-top-left-radius: 15px;
-    border-bottom-left-radius: 15px;
-    padding: 20px;
-  }
-
-  .upperleftpatientregister{
-    /* background: #000; */
-    width: 30%;
-    height: 14%;
-    align-items: center;
-    justify-content: center;
-    /* padding-inline: 10px; */
-    border-top-left-radius: 10px;
-    
-  }
-
-  .logoimage11{
-    width: 80%;
-    height: 80%;
-    object-fit: contain;
-  }
-
- .image2{
-  width: 95%;
-  height: 95%;
+   /* box-shadow: 2px 2px 4px #bcbaba; */
  }
 
- .rightpatentrester{
-  width: 55%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
+ .leftpatientregister{
+   width: 38%;
+   height: 100%;
+   background-color:  #2c7da0;
+   border-top-left-radius: 15px;
+   border-bottom-left-radius: 15px;
+   padding: 20px;
+ }
+
+ .upperleftpatientregister{
+   /* background: #000; */
+   width: 30%;
+   height: 14%;
+   align-items: center;
+   justify-content: center;
+   /* padding-inline: 10px; */
+   border-top-left-radius: 10px;
+   
+ }
+
+ .logoimage11{
+   width: 80%;
+   height: 80%;
+   object-fit: contain;
+ }
+
+.image2{
+ width: 95%;
+ height: 95%;
+}
+
+.rightpatentrester{
+ width: 55%;
+ height: 100%;
+ display: flex;
+ justify-content: center;
 flex-direction: column;
 align-items: center;
 gap: 20px;
+border: 1px solid #2c7da0;
 
 
- }
+}
 
- .signupdiv{
-  width: 85%;
-  height: 10%;
-  display: flex;
-  align-items: flex-end;
-  justify-content: flex-start;
-  
- }
+.signupdiv{
+ width: 85%;
+ height: 10%;
+ display: flex;
+ align-items: flex-end;
+ justify-content: flex-start;
+ 
+}
 
- .signupdiv>h2{
-  font-size: 22px;
-  font-family: Poppins;
-  font-weight: 500;
- }
+.signupdiv>h2{
+ font-size: 22px;
+ font-family: Poppins;
+ font-weight: 500;
+}
 
- .theformholder{
-  width: 90%;
-  height:  50px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  /* background-color: blue; */
- }
+.theformholder{
+ width: 90%;
+ height:  50px;
+ display: flex;
+ align-items: center;
+ justify-content: center;
+ /* background-color: blue; */
+}
 
- .theformholder > input{
-  width: 100%;
-  height: 100%;
-  border: 1px solid lightblue;
-  background-color: red;
-  border-radius: 8px;
-  outline: 10px;
-  font-size: 14px;
-  font-size: 250;
-  font-family: poppins;
-  cursor: pointer;
-  background: none;
-  padding-left: 7px;
+.theformholder > input{
+ width: 100%;
+ height: 100%;
+ border: 1px solid lightblue;
+ background-color: red;
+ border-radius: 8px;
+ outline: 10px;
+ font-size: 14px;
+ font-size: 250;
+ font-family: poppins;
+ cursor: pointer;
+ background: none;
+ padding-left: 7px;
 
- }
+}
 
- .loader{
-  width: 100%;
-  height: 10%;
-  display: flex;
-  justify-content: center;
-  align-items: center ;
+.loader{
+ width: 100%;
+ height: 10%;
+ display: flex;
+ justify-content: center;
+ align-items: center ;
 }
 
 
- .btnndiv {
-  width: 100%;
-  height: 80px;
-  /* background-color: green; */
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
- }
- .submitbttn{
+.btnndiv {
+ width: 100%;
+ height: 80px;
+ /* background-color: green; */
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ flex-direction: column;
+}
+.submitbttn{
+ width: 90%;
+ height: 50px;
+ background-color:#2c7da0;
+ border: none;
+ border-radius: 5px;
+ color: white;
+ cursor: pointer;
+ font-size: 20px;
+ font-weight: 400;
+ font-family: poppins;
+}
+
+.submitbttn:hover{
+ background-color: #27b7f5;
+}
+
+
+
+@media screen  and (max-width:428px)
+{
+  .leftpatientregister{
+     display: none;
+
+  }
+
+  .patientregisterholder{
+    width: 90%;
+    height: 80%;
+    /* background-color: red; */
+    
+  }
+
+  .rightpatentrester{
+    justify-content: space-evenly
+
+   }
+    
+.signupdiv{
+width: 100%;
+height: 10%;
+
+}
+
+   .signupdiv>h2{
+    font-size: 15px;
+    font-weight: 400;
+   }
+
+   .rightpatentrester{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    /* background-color: yellow; */
+    align-items: center;
+
+  
+  
+   }
+
+   .theformholder{
+    width: 95%;
+    height:  40px;
+    /* background: #000; */
+    
+   }
+
+   .theformholder > input{
+    padding-left: 8px;
+    height: 80%;
+  
+   }
+
+   .loader{
+    height: 8%;
+  }
+
+
+.btnndiv {
+ width: 100%;
+ height: 70px;
+ /* background: #000; */
+
+}
+
+.submitbttn{
   width: 90%;
-  height: 50px;
-  background-color:#2c7da0;
-  border: none;
-  border-radius: 5px;
-  color: white;
-  cursor: pointer;
-  font-size: 20px;
-  font-weight: 400;
-  font-family: poppins;
- }
+  height: 70px;
+  font-size: 15px;
 
- .submitbttn:hover{
-  background-color: #27b7f5;
+
  }
- 
- 
+}
 
    
+@media screen and (max-width:820px) {
+      
+ .rightpatentrester{
+
+   height: 100%;
+   /* background-color: yellow; */
+   
+  }
+
+  .signupdiv{
+   height: 5%;
+
+   
+  }
+ 
+  .signupdiv>h2{
+   font-size: 15px;
+   font-weight: 400;
+  }
+
+   
+ .theformholder{
+   height:  20px;
+
+ 
+  }
+ 
+  .theformholder > input{
+   width: 100%;
+   height: 100%;
+
+ 
+ 
+  }
+   }
+
    
    
    
@@ -155,23 +267,7 @@ gap: 20px;
    
    
    
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
-   
+  
    
    
    
